--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     
     
-    <!-- <script src="./javaScript/main.js"></script> -->
+    <script src="./javaScript/main.js"></script>
 </body>
 
 </html>
